--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>r2cloud</title>
+    <link href="/static/css/font-awesome-4.7.0.css" rel="stylesheet">
 	<style type="text/css">
 .form-signin {
   max-width: 360px;
